objects/DV_PAA__Partner_Activity_Type__c.object
<CustomObject>
    <fields>
        <fullName>DV_PAA__Automatic_Expiry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Points awarded from the account activities of this type will expire</inlineHelpText>
        <label>Automatic Expiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Category_Icon_URL__c</fullName>
        <formula>CASE( DV_PAA__Category__c ,&apos;Sales&apos;, &apos;/resource/DV_PAA__ActivityCategoryIcons/sales.svg&apos;, &apos;Service&apos;, &apos;/resource/DV_PAA__ActivityCategoryIcons/service.svg&apos;, &apos;Conference&apos;, &apos;/resource/DV_PAA__ActivityCategoryIcons/conference.svg&apos;, &apos;Certification&apos;, &apos;/resource/DV_PAA__ActivityCategoryIcons/certificate.svg&apos;, &apos;&apos;)</formula>
        <label>Category Icon URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Category_Icon__c</fullName>
        <formula>IMAGE( DV_PAA__Category_Icon_URL__c ,&apos;Category Icon&apos;, 35, 35)</formula>
        <label>Category Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DV_PAA__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Expiry_Period__c</fullName>
        <inlineHelpText>How many days do points from this activity type expires</inlineHelpText>
        <label>Expiry Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Points__c</fullName>
        <inlineHelpText>This is the default amount gained from an Activity. Different point values can be assigned to specific programs and levels through the Program Level Activity Point Association related list</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Valid from this date</inlineHelpText>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DV_PAA__Valid_Until__c</fullName>
        <inlineHelpText>Any activities of this type after the &quot;Valid Until&quot; date will not have any points. If you don&apos;t wish to have a &quot;Valid Until&quot; date simply leave this field empty</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Partner Activity Type</label>
    <listViews>
        <fullName>DV_PAA__All</fullName>
        <columns>NAME</columns>
        <columns>DV_PAA__Category__c</columns>
        <columns>DV_PAA__Category_Icon__c</columns>
        <columns>DV_PAA__Description__c</columns>
        <columns>DV_PAA__Automatic_Expiry__c</columns>
        <columns>DV_PAA__Expiry_Period__c</columns>
        <columns>DV_PAA__Points__c</columns>
        <columns>DV_PAA__Valid_From__c</columns>
        <columns>DV_PAA__Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Partner Activity Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Activity Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DV_PAA__Expiry_Period_Required</fullName>
        <active>true</active>
        <description>Expiry period field is required when &quot;Automatica Expiry&quot; field is checked</description>
        <errorConditionFormula>AND(DV_PAA__Automatic_Expiry__c = true, OR(ISNULL(DV_PAA__Expiry_Period__c), DV_PAA__Expiry_Period__c &lt; 0) )</errorConditionFormula>
        <errorDisplayField>DV_PAA__Expiry_Period__c</errorDisplayField>
        <errorMessage>You have to input a valid expiry period when this activity is an automatic expiry type</errorMessage>
    </validationRules>
</CustomObject>